# RouteIt-Framework

./: .gitignore  LICENSE  README.md  README_zhCN.md
.github/workflows/: ci.yml
route_it/: CMakeLists.txt  rti_global_config.json  rti_util.cmake
route_it/inc/: rti_config.h  rti_core.h  rti_generated_vlanid.h  rti_internal.h  rti_vlan.h
route_it/ld/: rti_isolate_linker_gcc.ld  rti_isolate_linker_windows.ld  rti_mbed_linker_rtivlan.ld  rti_sections.ld  rti_sections_gcc.ld  rti_sections_mingw.ld
route_it/src/: rti_vlan.c
route_it/src/example/vlan_id_generator/: test.h
route_it/src/generator/: config.json  rti_gen_vlan_script.py  rti_gen_vlan_templ.j2
route_it/tools/: rti_script_collector.py  rti_script_logger.py  rti_script_vlanid.py  rti_vlanid.j2
tests/: CMakeLists.txt  linker.ld  linker_gcc.ld  linker_mingw.ld
tests/cases/: rti_config.json  test_vlanid.cpp  test_vlanid.h  vlan_autogenerate.cpp  vlan_common_table.cpp  vlan_empty_table.cpp
